base/monitoring/netdata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netdata
  namespace: monitoring
  labels:
    app: netdata
spec:
  type: NodePort
  ports:
    - port: 19999
      targetPort: 19999
      nodePort: 30990
      protocol: TCP
      name: http
  selector:
    app: netdata
    release: netdata
    role: child
