base/monitoring/netdata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netdata
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.io/ingress-backend: traefik.io/v1alpha1
spec:
  ingressClassName: traefik
  rules:
  - host: netdata.oostrandpark.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netdata
            port:
              number: 19999
  tls:
  - hosts:
    - netdata.oostrandpark.com
    secretName: netdata-tls
